style.css
/* we love icon fonts for social media links*/
@import url(http://weloveiconfonts.com/api/?family=brandico);


/*Containers */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  margin: auto !important;
  font-size: 16px;
  font: "Droid Sans", sans-serif;
}

main  {
  background-color: #e6741e;
  border-style: solid;
  border-top: none;
  border-width: 1px !important;
  border-color: #d35d04;
  color: #e8e8e8;
}


/*Header */
.no-padding {
  padding: 0 !important;
  margin: 0 !important;
}

.logo {
  vertical-align: top;
  margin-right: auto;
  max-width: none;
  height: 115px;
}

.header-title {
  text-align: right;
  vertical-align: top;
  margin-left: auto;
  margin-right: 1em;
  float: right;
}

.sub-title {
  margin-top: 0;
  font-size: 1.3em;
  color: grey;
}

.header-img {
    position: absolute;
    width: 100%;
    text-align: center;
    bottom: 700px;
    font-size: 5em;
}

.strokeMe {
    color: white;
    text-shadow:
        -1px 0 black,
        0 1px black,
        1px 0 black,
        0 -1px black;
}


/*Navbar*/
/* brandico */
[class*="brandico-"]:before {
  font-family: 'brandico', sans-serif;
  margin-right: 0.5em;
}

.no-bottom-margin {
  margin-bottom: 0 !important;
}

.banner {
  width: 100%;
  position: relative;
  border-width: 1px !important;
}


/*Profile */
.about-me {
  display: inline-block;
  margin: auto;
}

.self {
  margin: 1em;
}

.about-text {
  float: right;
  margin: 1em;
}


/*Projects*/
.projects-section {
  max-width: 100%;
}

.project-name {
  text-align: center;
}

.project-title {
  color: white;
  font-size: 2em;
  position: absolute;
}


/*Footer*/
footer {
  color: #000;
  background-color: #fff;
}

.udacity {
  text-align: right;
  float: right;
}


/*Media Queries */
@media screen and (max-width: 765px) {

  .self {
    width: 25%;
    margin: 1em auto;
    display: block;
  }

  .about-text {
    text-align: center;
  }

  .project-img {
    width: 100%;
  }
}

@media screen and (min-width: 766px){
  .self {
    float: left;
  }

  .about-text {
    margin: 1em;
  }

}


/* Colored Bootstrap Navbar credit to: http://work.smarchal.com/twbscolor/ */
.navbar-default {
  background-color: #e6741e !important;
  border-color: #d35d04 !important;
}

.navbar-default
.navbar-brand {
  color: #e8e8e8 !important;
}

.navbar-default
.navbar-brand:hover,
.navbar-default
.navbar-brand:focus {
  color: #fff !important;
}

.navbar-default
.navbar-text {
  color: #e8e8e8 !important;
}

.navbar-default
.navbar-nav > li > a {
  color: #e8e8e8 !important;
}

.navbar-default
.navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #fff !important;
}

.navbar-default
.navbar-nav > li > .dropdown-menu {
  background-color: #e6741e !important;
}

.navbar-default
.navbar-nav > li > .dropdown-menu > li > a {
  color: #e8e8e8 !important;
}

.navbar-default
.navbar-nav > li > .dropdown-menu > li > a:hover,
.navbar-default
.navbar-nav > li > .dropdown-menu > li > a:focus {
  color: #fff !important;
  background-color: #d35d04 !important;
}

.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
  background-color: #e6741e !important;
}

.navbar-default
.navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #fff !important;
  background-color: #d35d04 !important;
}

.navbar-default
.navbar-nav > .open > a,
.navbar-default
.navbar-nav > .open > a:hover,
.navbar-default
.navbar-nav > .open > a:focus {
  color: #fff !important;
  background-color: #d35d04 !important;
}

.navbar-default
.navbar-toggle {
  border-color: #d35d04 !important;
}

.navbar-default
.navbar-toggle:hover,
.navbar-default
.navbar-toggle:focus {
  background-color: #d35d04 !important;
}

.navbar-default
.navbar-toggle
.icon-bar {
  background-color: #e8e8e8 !important;
}

.navbar-default
.navbar-collapse,
.navbar-default
.navbar-form {
  border-color: #e8e8e8 !important;
}
.navbar-default
.navbar-link {
  color: #e8e8e8 !important;
}

.navbar-default
.navbar-link:hover {
  color: #fff !important;
}

@media (max-width: 767px) {
  .navbar-default
  .navbar-nav
  .open
  .dropdown-menu > li > a {
    color: #e8e8e8 !important;
  }

  .navbar-default
  .navbar-nav .open
  .dropdown-menu > li > a:hover,
  .navbar-default
  .navbar-nav
  .open
  .dropdown-menu > li > a:focus {
    color: #fff !important;
  }

  .navbar-default
  .navbar-nav .open
  .dropdown-menu > .active > a,
  .navbar-default
  .navbar-nav
  .open .dropdown-menu > .active > a:hover,
  .navbar-default
  .navbar-nav
  .open
  .dropdown-menu > .active > a:focus {
    color: #fff !important;
    background-color: #d35d04 !important;
  }
}

